[package]
name = "rs-bytes2hex"
version = "0.1.0"
edition = "2024"

exclude = [
]

#[lib]
#crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1
